--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -1,19 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <group android:checkableBehavior="single">
+        <item
+            android:id="@+id/account"
+            android:orderInCategory="2"
+            android:title="Signed in as:"
+            app:showAsAction="ifRoom|withText" />
 
-    <!-- Customize your navigation drawer menu items -->
-    <item
-        android:id="@+id/nav_item1"
-        android:title="Logged in as:" />
-    <item
-        android:id="@+id/nav_item2"
-        android:title="Change Password" />
-    <item
-        android:id="@+id/nav_item3"
-        android:title="Delete Account" />
-    <item
-        android:id="@+id/nav_item4"
-        android:title="Logout" />
-    <!-- Add more items as needed -->
+        <item
+            android:id="@+id/changePassword"
+            android:orderInCategory="2"
+            android:title="Change Password"
+            app:showAsAction="ifRoom|withText" />
 
+        <item
+            android:id="@+id/deleteAcc"
+            android:orderInCategory="4"
+            android:title="Delete Account"
+            app:showAsAction="ifRoom|withText" />
+
+        <item
+            android:id="@+id/logoutUser"
+            android:orderInCategory="5"
+            android:title="Logout"
+            app:showAsAction="never" />
+    </group>
 </menu>
