Added initial necessary files for RideOffer FireBase DB

--- a/app/src/main/res/layout/activity_ride_offers.xml
+++ b/app/src/main/res/layout/activity_ride_offers.xml
@@ -50,10 +50,10 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/origin_textView"
+                android:id="@+id/pickup_textView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Start Location"
+                android:text="Pickup"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
