--- a/app/src/main/res/layout/activity_new_ride_offer.xml
+++ b/app/src/main/res/layout/activity_new_ride_offer.xml
@@ -7,7 +7,7 @@
     tools:context=".NewRideOffer">
 
     <EditText
-        android:id="@+id/editText1"
+        android:id="@+id/rideOfferDialog_editText1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
@@ -35,7 +35,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText1" />
+        app:layout_constraintTop_toBottomOf="@+id/rideOfferDialog_editText1" />
 
     <EditText
         android:id="@+id/editText3"
