able to show the two lists. Add and Delete features in progress.

--- a/app/src/main/res/layout/add_ride_offer_dialog.xml
+++ b/app/src/main/res/layout/add_ride_offer_dialog.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
         android:ems="10"
-        android:hint="Driver Name"
+        android:hint="Name"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
