--- a/app/src/main/res/layout/activity_accepted_requests.xml
+++ b/app/src/main/res/layout/activity_accepted_requests.xml
@@ -31,7 +31,31 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/textView4"
+                    android:id="@+id/accepted_textView40"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="Rider Name: "
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/accepted_rideRequests_riderName_TextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="driverName"
+                    android:textSize="12sp"
+                    android:textStyle="bold"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textView40"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -40,12 +64,12 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/driverName_TextView"
+                    android:id="@+id/accepted_rideRequests_driverName_TextView"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:text="driverName"
                     android:textSize="12sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"/>
 
             </LinearLayout>
 
@@ -64,7 +88,7 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/date_textView"
+                    android:id="@+id/accepted_rideRequests_date_textView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="date"
@@ -87,7 +111,7 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/time_TextView"
+                    android:id="@+id/accepted_rideRequests_time_TextView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Time"
@@ -110,7 +134,7 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/pickup_textView"
+                    android:id="@+id/accepted_rideRequests_pickup_textView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Pickup"
@@ -133,7 +157,7 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/destination_TextView"
+                    android:id="@+id/accepted_rideRequests_destination_TextView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Destination"
@@ -141,11 +165,34 @@
                     android:textStyle="bold" />
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textView100"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="User Points: "
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/accepted_rideRequests_userPoints_TextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="User Points"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
             <Button
-                android:id="@+id/accept_button"
+                android:id="@+id/accepted_rideRequests_accept_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Accept Ride" />
+                android:text="Confirm Ride Request" />
 
         </LinearLayout>
 
